# website

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  README.md  models.py  package-lock.json  package.json  pyproject.toml  tasks.py  utils.py  web.py
.devcontainer/: .env  devcontainer.json  docker-compose.yml  post-create.sh
blueprints/: api.py  auth.py  challenges.py  contests.py  core.py  discord.py
migrations/: 001_add_discord_user_id_field.py
static/css/: tailwind.css
static/js/: theme-toggle.js
templates/: Layout.html  Macros.html  activity.html  author_profile.html  scoreboard.html  tailwind.config.js  tailwind.css  user_profile.html
templates/Macros/: Alert.html  Card.html  Form.html  Input.html  Submit.html
templates/auth/: Layout.html  forgot_password-reset.html  login.html  register.html
templates/challenge/: list.html  view.html
templates/contest/: Layout.html  activity.html  challenge_view.html  challenges.html  scoreboard--success.html  scoreboard.html
tests/: conftest.py  test_activity_route.py  test_api_challenge.py  test_auth_routes.py  test_author_profile_route.py  test_challenge_index_route.py  test_challenge_list.py  test_challenge_submit.py  test_discord_route.py  test_forms.py  test_index_route.py  test_models.py  test_routes.py  test_user_profile_route.py  test_utils.py
