[project]
name = ""
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "requests==2.32.3",

  # Flask
  "flask==3.1.0",
  "flask-seasurf==2.0.0",
  "jinja2==3.1.6",
  "markupsafe==3.0.2",
  "werkzeug==3.1.3",

  # PostgreSQL
  "peewee==3.17.9",
  "psycopg2-binary==2.9.10",

  # Heroku
  "gunicorn==23.0.0",
]

[dependency-groups]
local = [
  "python-dotenv==1.2.1",
  "watchdog==6.0.0",

  "pytest==8.2.2",
  "pytest-cov==5.0.0",
  "ruff==0.6.8",
]

[tool.pytest.ini_options]
addopts = "--cov=web --cov=blueprints --cov=models --cov=utils --cov-report=term-missing --cov-report=html"
python_files = ["tests/test_*.py"]
filterwarnings = [
  "ignore:datetime\\.datetime\\.utcnow\\(\\) is deprecated.*:DeprecationWarning:flask_seasurf",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["F", "I"]
ignore = []
